# automation-rag-chatbot

./: Dockerfile  README.md  docker-compose.yml  main.py  pyproject.toml
.github/workflows/: main.yml
frontend/: app.py
frontend/static/: index.html
frontend/static/css/: style.css
frontend/static/js/: script.js
mcp_client/: __init__.py  agent.py  app.py  config.py  llm_utils.py
