[project]
name = "automation-rag-chatbot"
version = "0.1.0"
description = "ONDC RAG Chatbot with streaming and session management"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "fastapi>=0.135.3",
    "fastmcp>=3.2.0",
    "httpx>=0.28.1",
    "langchain-core>=1.2.26",
    "langchain-ollama>=1.1.0",
    "langchain-openai>=0.1.0",
    "langchain-tools>=0.1.34",
    "mcp[cli]>=1.27.0",
    "pydantic>=2.12.5",
    "pydantic-settings>=2.13.1",
    "python-dotenv>=1.2.2",
    "uvicorn>=0.44.0",
]
